@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libempathy
+Description:  Empathy interface library
+Requires: glib-2.0, gobject-2.0, gtk+-2.0, libglade-2.0, libmissioncontrol, libtelepathy, libempathy
+Version: @VERSION@
+Libs: -L${libdir} -lempathy-gtk
+Cflags: -I${includedir} 
