@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libempathy
+Description:  Empathy base library
+Requires: glib-2.0, gobject-2.0, libxml-2.0, libtelepathy, libmissioncontrol
+Version: @VERSION@
+Libs: -L${libdir} -lempathy
+Cflags: -I${includedir} 
